--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ Deconstructing from the ground up to recreate!</h5>
         <div class="row">
           <div class="col-sm-6">
             <div class="sustainablity-footer" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000"> <img
-                src="images/02.webp"> </div>
+                src="images/Non-Ferrous-Scrap.jpg"> </div>
           </div>
           <div class="col-sm-6">
             <div class="volt-heading" data-aos="fade-left" data-aos-delay="400">
