--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       </div>
     </div>
   </div>
-<section class="volt-section home-section2 bg-grey overview-section section-padding">
+<section class="volt-section home-section2 overview-section section-padding">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-6">
