--- a/index.html
+++ b/index.html
@@ -177,20 +177,20 @@
 
 
 
-        <!-- <div class="item">
-          <div class="banner-text">
+         <div class="item">
+          <!-- <div class="banner-text">
             <div class="volt-container">
               <p>Mother earth needs to rest</p>
               <h5>WHATSAPP</h5>
               <a href="#" class="btn-volt-secondary">KNOW MORE</a>
             </div>
-          </div>
-          <img src="images/whatsapp-stats-desktop.webp" alt="">
+          </div> -->
+          <img src="images/bulksms.png" alt="">
         </div>
         
         
 
-        <div class="item">
+      <!-- <div class="item">
           <div class="banner-text">
             <div class="volt-container">
               <p>Mother earth needs to rest</p>
